--- a/index.html
+++ b/index.html
@@ -4,5 +4,14 @@
 </head>
 <body>
 <h1>Hello World!!!<h1>
+    <p> A data warehouse is a central repository system that collects, 
+        integrates, and stores large volumes of data from various 
+        sources for analysis and reporting to support business 
+        intelligence and decision-making. It acts as a "single source 
+        of truth" by providing historical and consistent data for 
+        operations, allowing users to generate reports, monitor trends,
+         and extract valuable business insights from data-driven 
+         applications. 
+    </p>
 </body>
 </html>
